--- a/frontend/src/app/components/carnet-list/carnet-list.component.html
+++ b/frontend/src/app/components/carnet-list/carnet-list.component.html
@@ -15,7 +15,7 @@
           </td>
           
         
-  <div>categorie:<p>{{carnet.categorie}}</p> </div>  
+
   <div>nom:<p>{{carnet.nom}}</p> </div>    
    <div>prenom:<p>{{carnet.prenom}}</p> </div> 
 
@@ -91,6 +91,8 @@
     <div>prenomM:<p>{{carnet.prenomM}}</p> </div> 
  
     <div>telM <p>{{carnet.telM}}</p> </div>
+    <div>telM <p>{{carnet.password}}</p> </div>
+    <div>telM <p>{{carnet.role}}</p> </div>
 
     </div>
     </div>
