--- a/frontend/src/app/components/blog/blog.component.html
+++ b/frontend/src/app/components/blog/blog.component.html
@@ -1,34 +1,214 @@
-<div class="container mt-4">
-  <h1>Articles</h1>
-  <form [formGroup]="articleForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <label for="title">Title:</label>
-      <input type="text" class="form-control" id="title" formControlName="title" required>
-    </div>
-    <div class="form-group">
-      <label for="content">Content:</label>
-      <textarea class="form-control" id="content" formControlName="content" required></textarea>
-    </div>
-    <div class="form-group">
-      <label for="photo">Photo:</label>
-      <input type="file" class="form-control-file" id="photo" (change)="onFileSelected($event)">
-    </div>
-    <button type="submit" class="btn btn-primary">Save</button>
-    <button type="button" class="btn btn-secondary" *ngIf="isEditMode" (click)="onCancel()">Cancel</button>
-  </form>
-  <hr>
-  <div class="row">
-    <div class="col-md-6 mb-3" *ngFor="let article of articles">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">{{ article.title }}</h5>
-          <p class="card-text">{{ article.content }}</p>
-          <img *ngIf="article.photo" [src]="'http://localhost:4000/uploads/' + article.photo" class="card-img-top" alt="Article photo">
-          <button type="button" class="btn btn-primary" (click)="onEdit(article)">Edit</button>
-          <button type="button" class="btn btn-danger" (click)="onDelete(article)">Delete</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>PFE</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="" />
+    <meta name="keywords" content="">
+    <meta name="author" content="Phoenixcoded" />
+    <!-- Favicon icon -->
+
+    
+    <link rel="icon" href="/assets/admin/images/favicon.ico" type="image/x-icon">
+    <!-- vendor css -->
+    <link rel="stylesheet" href="/assets/admin/css/style.css">
+</head>
+<body style="background-color: rgb(231, 111, 167);"  >
+	<!-- [ navigation menu ] start -->
+	<nav class="pcoded-navbar menu-dark ">
+		<div class="navbar-wrapper  ">
+			<div class="navbar-content scroll-div " >
+				<div >
+					<div class="main-menu-header">
+						<img class="img-radius" src="/assets/img/gyne.png" alt="User-Profile-Image">
+						<div class="user-details">
+							<div id="more-details">Docteur Nesrine Machat <i class="fa fa-caret-down"></i>
+                            </div>
+						</div>
+					</div>
+				</div>
+<br><br>
+				<ul class="nav pcoded-inner-navbar contain "id="tit1">
+					<li class="nav-item">
+					    <a href="admin/dashboard" class="nav-link "><span>
+                      <img src="/assets/icons/home.png" class="icon"></span>
+                      <span class="pcoded-mtext">Tableau de bord</span></a>
+					</li>
+                    
+               <li class="nav-item pcoded-hasmenu">
+                  <a href="/admin/listP" class="nav-link "><span>
+                     <img src="/assets/icons/woman.png"  class="icon"></span>
+                     <span class="pcoded-mtext">Gérer les patientes</span></a>
+                  <ul class="pcoded-submenu">
+                      <li><a href="admin/listP" target="_blank">Liste des patientes</a></li>
+                  </ul>
+              </li>
+              <li class="nav-item pcoded-hasmenu">
+                <a href="/admin/recl" class="nav-link "><span>
+                   <img src="/assets/icons/rendez.png" class="icon"></span>
+                   <span class="pcoded-mtext">Gérer les rendez-vous</span></a>
+                <ul class="pcoded-submenu">
+                    <li><a href="admin/recl" target="_blank">Consulter les rendez-vous</a></li>
+                </ul>
+              <li class="nav-item pcoded-hasmenu">
+                <a href="/admin/listP" class="nav-link "><span>
+                   <img src="assets/icons/medica.png"  class="icon" ></span>
+                   <span class="pcoded-mtext">Gérer les médicaments</span></a>
+                <ul class="pcoded-submenu">
+                    <li><a href="admin/listP" target="_blank">Liste des médicaments</a></li>
+                </ul>
+            </li>
+            <li class="nav-item pcoded-hasmenu">
+                <a href="/admin/listP" class="nav-link "><span>
+                   <img src="/assets/icons/analysee.png" class="icon"></span>
+                   <span class="pcoded-mtext">Gérer les analyses</span></a>
+                <ul class="pcoded-submenu">
+                    <li><a href="admin/listP" target="_blank">Liste des analyses</a></li>
+                </ul>
+            </li>
+        <li class="nav-item pcoded-hasmenu">
+            <a href="/admin/recl" class="nav-link "><span>
+                <img src="/assets/icons/msg.png" class="icon"></span>
+               <span class="pcoded-mtext">Gérer les réclamations</span></a>
+            <ul class="pcoded-submenu">
+                <li><a href="admin/recl" target="_blank">Consulter les réclamations</a></li>
+            </ul>
+        </li>
+        <br><br><br>
+		<li><a href="/login" ><i class="fa fa-sign-out black_color text-bold"></i> 
+			<span>Déconnexion</span></a></li>		
+    </ul>
+			</div>
+		</div>
+	</nav>
+	<!-- [ navigation menu ] end -->
+	<!-- [ Header ] start -->
+	<header class="navbar pcoded-header navbar-expand-lg navbar-light header-blue">
+		<div class="m-header">
+					<a class="mobile-menu" id="mobile-collapse" href="/admin/dashboard"><span></span></a>
+					<a href="#!" class="b-brand">
+						<!-- ========   change your logo hear   ============ -->
+						<img src="/assets/admin/images/logo-icon.png" alt="" class="logo-thumb">
+					</a>
+					<a href="#!" class="mob-toggler" >
+						<i class="feather icon-more-vertical"></i>
+					</a>
+				</div>
+				<div class="collapse navbar-collapse">
+					<ul class="navbar-nav mr-auto">
+                        
+						<li class="nav-item" id="logout">
+							<a href="#!" class="pop-search"><i class="feather icon-search"></i></a>
+							<div class="search-bar">
+								<input type="text" id="m-search" class="form-control"  
+                                placeholder="Rechercher...">
+								<button type="button" class="close" aria-label="Close">
+									<span aria-hidden="true">&times;</span>
+								</button>
+							</div>
+						</li>
+					</ul>
+					<ul class="navbar-nav ml-auto">
+                      
+						<li>
+							<div class="dropdown" id="logout">
+								<a class="dropdown-toggle" href="#" data-toggle="dropdown"><i class="icon feather icon-bell"></i></a>
+								<div class="dropdown-menu dropdown-menu-right notification">
+									<div class="noti-head" >
+										<h6 class="d-inline-block m-b-0">Notifications</h6>
+									</div>
+								</div>
+							</div>
+						</li>&nbsp;&nbsp;&nbsp;
+						<li>
+							<div class="dropdown drp-user">
+								<a href="/login"  id="logout"
+                                     class="dropdown-toggle" data-toggle="dropdown">
+									<i class="feather icon-log-out"></i>
+								</a>
+							</div>
+						</li>
+                        <li>
+                            
+                        </li>
+					</ul>
+				</div>
+				
+			
+	</header>
+	<!-- [ Header ] end -->
+<!-- [ Main Content ] start -->
+<section class="pcoded-main-container">
+    <div class="pcoded-content">
+        <!-- [ breadcrumb ] start -->
+        <div class="page-header">
+            <div class="page-block container">
+                <div class="row align-items-center">
+                    <div class="col-md-12">
+                        <div class="page-header-title">
+                            <h5 class="m-b-10">Réclamations</h5>
+                        </div>
+                        <ul class="breadcrumb">
+                            <li class="breadcrumb-item"><a href="/admin/dashboard"><i class="feather icon-home"></i></a></li>
+                            <li class="breadcrumb-item"><a href="/admin/listP">Gérer les réclamations</a></li>
+                            <li class="breadcrumb-item"><a href="/admin/listP">Réclamations</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
+        <!-- [ breadcrumb ] end -->
+        <!-- [ Main Content ] start -->
+		<div class="col-xl-12">
+			<div class="container p-3 my-3 border cont">
+				<div class="form-group mb-4">
+				   
+				 </div><br>
+				<!-- table section -->
+			   
+				<div class="container mt-4">
+          <h1>Ajout d'articles</h1>
+          <form [formGroup]="articleForm" (ngSubmit)="onSubmit()">
+            <div class="form-group">
+              <label for="title">Title:</label>
+              <input type="text" class="form-control" id="title" formControlName="title" required>
+            </div>
+            <div class="form-group">
+              <label for="content">Content:</label>
+              <textarea class="form-control" id="content" formControlName="content" required></textarea>
+            </div>
+            <div class="form-group">
+              <label for="photo">Photo:</label>
+              <input type="file" class="form-control-file" id="photo" (change)="onFileSelected($event)">
+            </div>
+            <button type="submit" class="btn btn-primary mr-1">Save</button>
+            <button type="button" class="btn btn-primary" *ngIf="isEditMode" (click)="onCancel()">Cancel</button>
+          </form>
+          <hr>
+          <div class="row">
+            <h1>Liste des articles</h1>
+            <div class="col-md-6 mb-3" *ngFor="let article of articles">
+              <div class="card">
+                <div class="card-body">
+                  <h5 class="card-title">{{ article.title }}</h5>
+                  <p class="card-text">{{ article.content }}</p>
+                  <img *ngIf="article.photo" [src]="'http://localhost:4000/uploads/' + article.photo" class="card-img-top" alt="Article photo">
+                  <button type="button" class="btn btn-primary mr-1" (click)="onEdit(article)">Edit</button>
+                  <button type="button" class="btn btn-danger" (click)="onDelete(article)">Delete</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+                
+			</div>
 </div>
+
+        <!-- [ Main Content ] end -->
+    </div>
+</section>
+
+
 
