--- a/frontend/src/app/components/blog/blog.component.html
+++ b/frontend/src/app/components/blog/blog.component.html
@@ -176,6 +176,10 @@
               <input type="text" class="form-control" id="title" formControlName="title" required>
             </div>
             <div class="form-group">
+                <label for="description">description:</label>
+                <textarea class="form-control" id="description" formControlName="description" required></textarea>
+              </div>
+            <div class="form-group">
               <label for="content">Content:</label>
               <textarea class="form-control" id="content" formControlName="content" required></textarea>
             </div>
@@ -193,6 +197,7 @@
               <div class="card">
                 <div class="card-body">
                   <h5 class="card-title">{{ article.title }}</h5>
+                  <p class="card-text">{{ article.description}}</p>
                   <p class="card-text">{{ article.content }}</p>
                   <img *ngIf="article.photo" [src]="'http://localhost:4000/uploads/' + article.photo" class="card-img-top" alt="Article photo">
                   <button type="button" class="btn btn-primary mr-1" (click)="onEdit(article)">Edit</button>
