--- a/frontend/src/app/components/cardcarnet/cardcarnet.component.css
+++ b/frontend/src/app/components/cardcarnet/cardcarnet.component.css
@@ -212,3 +212,29 @@ html, body {
   pointer-events: none;
   color: #aaa;
 }
+.pos{
+  text-align: right;
+}
+#logout{
+  color: #fafcfa;
+  font-size: 15px;
+}
+#tit{
+  font-size: 20px;
+}
+#tit1{
+  font-size: 14px;
+}
+.icon {
+  width: 30px;
+  height: 30px;
+  background-size: cover;
+}
+.ico {
+  width: 60px;
+  height: 60px;
+  background-size: cover;
+}
+a{
+  color: white;
+}
