--- a/frontend/src/app/components/docteur/list-patientes/list-patientes.component.css
+++ b/frontend/src/app/components/docteur/list-patientes/list-patientes.component.css
@@ -15,6 +15,8 @@
     width: 30px;
     height: 30px;
     background-size: cover;
+    color: rgba(0, 0, 0, 0.675);
+
   }
   .ico {
     width: 60px;
