--- a/frontend/src/app/components/service/service.component.html
+++ b/frontend/src/app/components/service/service.component.html
@@ -1,86 +1,88 @@
-
+<app-navbar></app-navbar>
 <!-- Services Start -->
-    <div class="container-fluid py-5">
-        <div class="container">
-            <div class="text-center mx-auto mb-5" style="max-width: 500px;">
-                <h5 class="d-inline-block  text-uppercase border-bottom border-5">Présentations des Services</h5>
-                <h1 class="display-4">Excellents Services Médicaux</h1>
+<div class="container-fluid py-5">
+    <div class="container">
+        <div class="text-center mx-auto mb-5" style="max-width: 500px;">
+            <h5 class="d-inline-block  text-uppercase border-bottom border-5 text-black">Présentations des Services</h5>
+            <h1 class="display-4">Excellents Services Médicaux</h1>
+        </div>
+        <div class="row g-5">
+            <div class="col-lg-4 col-md-6">
+                <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
+                    <div class="service-icon mb-4">
+                        <i class="fa fa-2x fa-user-md text-white"></i>
+                    </div>
+                    <h4 class="mb-3">Gynecologie-obstérique</h4>
+                    <p class="m-0">traitement de  tous les problèmes inhérents au dépistage, au diagnostic, au traitement et à la prévention des maladies de l'appareil reproducteur de la femme.</p>
+                    <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <i class="bi bi-arrow-right"></i>
+                    </a>
+                </div>
             </div>
-            <div class="row g-5">
-                <div class="col-lg-4 col-md-6">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon mb-4">
-                            <i class="fa fa-2x fa-user-md text-white"></i>
-                        </div>
-                        <h4 class="mb-3">Gynecologie-obstérique</h4>
-                        <p class="m-0">traitement de  tous les problèmes inhérents au dépistage, au diagnostic, au traitement et à la prévention des maladies de l'appareil reproducteur de la femme.</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
+            <div class="col-lg-4 col-md-6">
+                <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
+                    <div class="service-icon mb-4">
+                        <i class="fa fa-2x fa-procedures text-white"></i>
                     </div>
+                    <h4 class="mb-3">Echographie</h4>
+                    <p class="m-0">l'échographie abdominale,l'échographie endo-vaginale, qui visualise mieux le col de l'utérus, l'utérus, et les ovaires.</p>
+                    <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <i class="bi bi-arrow-right"></i>
+                    </a>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon mb-4">
-                            <i class="fa fa-2x fa-procedures text-white"></i>
-                        </div>
-                        <h4 class="mb-3">Echographie</h4>
-                        <p class="m-0">l'échographie abdominale,l'échographie endo-vaginale, qui visualise mieux le col de l'utérus, l'utérus, et les ovaires.</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
+                    <div class="service-icon mb-4">
+                        <i class="fa fa-2x fa-stethoscope text-white"></i>
                     </div>
+                    <h4 class="mb-3">Les maladies du sein</h4>
+                    <p class="m-0">Fibroadénome,Kyste,Changements fibrokystiques,Hyperplasie,Ecoulement du mamelon,Gynécomastie,Cancers du sein,Formes rares,Cancer inflammatoire,Calcifications mammaires</p>
+                    <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <i class="bi bi-arrow-right"></i>
+                    </a>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon mb-4">
-                            <i class="fa fa-2x fa-stethoscope text-white"></i>
-                        </div>
-                        <h4 class="mb-3">Les maladies du sein</h4>
-                        <p class="m-0">Fibroadénome,Kyste,Changements fibrokystiques,Hyperplasie,Ecoulement du mamelon,Gynécomastie,Cancers du sein,Formes rares,Cancer inflammatoire,Calcifications mammaires</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon mb-4">
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
+                    <div class="service-icon mb-4">
 
-                            <i class="fa fa-2x fa-medkit text-white" aria-hidden="true"></i>
-                        </div>
-                        <h4 class="mb-3">Coelioscopie</h4>
-                        <p class="m-0">La cœlioscopie est une technique de chirurgie permettant d’accéder à l’intérieur de l’abdomen par de petites incisions de la paroi abdominale. Cet acte se pratique pour diagnostiquer ou traiter certaines maladies, notamment gynécologiques ou digestives.</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
+                        <i class="fa fa-2x fa-medkit text-white" aria-hidden="true"></i>
                     </div>
+                    <h4 class="mb-3">Coelioscopie</h4>
+                    <p class="m-0">La cœlioscopie est une technique de chirurgie permettant d’accéder à l’intérieur de l’abdomen par de petites incisions de la paroi abdominale. Cet acte se pratique pour diagnostiquer ou traiter certaines maladies, notamment gynécologiques ou digestives.</p>
+                    <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <i class="bi bi-arrow-right"></i>
+                    </a>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon mb-4">
-                            <i class="fa fa-2x fa-pills text-white"></i>
-                        </div>
-                        <h4 class="mb-3">Stérilité du couple</h4>
-                        <p class="m-0">Incapacité pour un être vivant de se reproduire, de procréer, due à des troubles fonctionnels, à des lésions organiques des organes génitaux .</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
+                    <div class="service-icon mb-4">
+                        <i class="fa fa-2x fa-pills text-white"></i>
                     </div>
+                    <h4 class="mb-3">Stérilité du couple</h4>
+                    <p class="m-0">Incapacité pour un être vivant de se reproduire, de procréer, due à des troubles fonctionnels, à des lésions organiques des organes génitaux .</p>
+                    <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <i class="bi bi-arrow-right"></i>
+                    </a>
                 </div>
-                <div class="col-lg-4 col-md-6">
-                    <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
-                        <div class="service-icon mb-4">
-                            <i class="fa fa-2x fa-microscope text-white"></i>
-                        </div>
-                        <h4 class="mb-3">ECG</h4>
-                        <p class="m-0">L'électrocardiogramme ou ECG est un examen majeur en cardiologie qui permet d'effectuer des diagnostics précis, notamment celui de troubles du rythme, de l'infarctus ou de péricardite</p>
-                        <a class="btn btn-lg btn-primary rounded-pill" href="">
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
+            </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="service-item bg-light rounded d-flex flex-column align-items-center justify-content-center text-center">
+                    <div class="service-icon mb-4">
+                        <i class="fa fa-2x fa-microscope text-white"></i>
                     </div>
+                    <h4 class="mb-3">ECG</h4>
+                    <p class="m-0">L'électrocardiogramme ou ECG est un examen majeur en cardiologie qui permet d'effectuer des diagnostics précis, notamment celui de troubles du rythme, de l'infarctus ou de péricardite</p>
+                    <a class="btn btn-lg btn-primary rounded-pill" href="">
+                        <i class="bi bi-arrow-right"></i>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
+</div>
+<!-- Services End -->
+
     <!-- Services End -->
