--- a/frontend/src/app/components/docteur/list-patientes/list-patientes.component.html
+++ b/frontend/src/app/components/docteur/list-patientes/list-patientes.component.html
@@ -190,7 +190,8 @@
                        <td><p class="fw-normal mb-1">{{ patiente.naissance}}</p></td>
 					   <td><p class="fw-normal mb-1">{{ patiente.tel}}</p></td>
 					   <td>
-						<button mat-button routerLink="/create-carnet/{{patiente._id}}"> Create </button>
+						<button mat-button routerLink="/create-carnet/{{patiente._id}}">carnet</button>
+						<button mat-button routerLink="/const/{{patiente._id}}"> consultation </button>
 						 <button type="button" class="btn btn-link btn-sm btn-rounded" title="supprimer"  (click)="deletepatiente(patiente)">
 						   <i class="fa fa-trash icon"></i>
 						 </button>
