--- a/frontend/src/app/components/consultation/consultation.component.html
+++ b/frontend/src/app/components/consultation/consultation.component.html
@@ -7,7 +7,7 @@
                 <h1>Créer carnet de santé pour {{patient.nomP}} {{patient.prenomP}}</h1>
             <div class="row justify-content-between text-left">
                   <div class="row justify-content-between text-left">
-                      <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3"> date<span class="text-danger"> *</span></label> <input type="date" id="date" name="date" formControlName="consultdate"  > </div>
+                      <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3"> date<span class="text-danger"> *</span></label> <input type="date" id="date" name="date" formControlName="consultation.consultdate"  > </div>
                       <div class="form-group col-sm-6 flex-column d-flex"> <label class="form-control-label px-3">compte rendu de consultation<span class="text-danger"> *</span></label> <input type="text" id="lname" name="lname" placeholder="Enter your last name" formControlName="conclusion" > </div>
                   </div>
                   <div class="row justify-content-between text-left">
